--- a/water-my-plants/package.json
+++ b/water-my-plants/package.json
@@ -9,9 +9,9 @@
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
-    "react-notifications-component": "^1.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-toastify": "^4.5.2",
     "styled-components": "^4.1.3"
   },
   "scripts": {
