--- a/water-my-plants/package.json
+++ b/water-my-plants/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-toastify": "^4.5.2",
+    "semantic-ui-react": "^0.85.0",
     "styled-components": "^4.1.3"
   },
   "scripts": {
