--- a/water-my-plants/package.json
+++ b/water-my-plants/package.json
@@ -6,7 +6,9 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
+    "prop-types": "^15.7.1",
     "react": "^16.7.0",
+    "react-animated-weather": "^2.0.0",
     "react-bootstrap": "^0.32.4",
     "react-collapsible": "^2.5.0",
     "react-dom": "^16.7.0",
