--- a/water-my-plants/package.json
+++ b/water-my-plants/package.json
@@ -1,6 +1,7 @@
 {
   "name": "water-my-plants",
   "version": "0.1.0",
+  "homepage": "https://lidiia92.github.io/Water_the_Plants_react/",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
@@ -9,6 +10,7 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
+    "gh-pages": "^2.0.1",
     "prop-types": "^15.7.1",
     "react": "^16.7.0",
     "react-animated-weather": "^2.0.0",
@@ -25,6 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
