--- a/water-my-plants/package.json
+++ b/water-my-plants/package.json
@@ -8,6 +8,8 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "@testing-library/jest-dom": "^4.2.0",
+    "@testing-library/react": "^9.3.1",
     "axios": "^0.18.0",
     "gh-pages": "^2.0.1",
     "prop-types": "^15.7.1",
@@ -18,6 +20,7 @@
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-test-renderer": "^16.11.0",
     "react-toastify": "^4.5.2",
     "semantic-ui-react": "^0.85.0",
     "styled-components": "^4.1.3"
@@ -36,5 +39,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {}
 }
